fix: convert absolute paths to relative & adjust functioning card spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -164,7 +164,7 @@ html {
   display: flex;
   flex-direction: column;
   align-items: flex-end;
-  gap: 25px;
+  gap: 30px;
 }
 .functioning__card {
   position: relative;
