--- a/sass/layout/_functioning.scss
+++ b/sass/layout/_functioning.scss
@@ -20,7 +20,7 @@
     display: flex;
     flex-direction: column;
     align-items: flex-end;
-    gap: 25px;
+    gap: 30px;
   }
 
   &__card {
